# mina

./: Justfile  flake.nix
genesis_ledgers/: uat-genesis.json
ops/: buildkite-pipeline.yaml
src/app/cli/src/cli_entrypoint/: mina_cli_entrypoint.ml
src/app/mina_txn_hasher/: dune  mina_txn_hasher.ml
src/config/: devnet.mlh
src/lib/mina_lib/: coda_subscriptions.ml  mina_lib.ml  mina_subscriptions.ml
